welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:5: error: type mismatch;
 found   : Int
 required: String
                              else return a
                                          ^